[project]
name = 'helium-py'
version = '0.2-alpha.2'
description = 'Official python lib for interacting with the Helium blockchain'
authors = [
    { name = 'Joshua Miller', email = 'joshua@cryptoballoon.net' },
    { name = 'Joe Cronyn', email = 'joe@cryptoballoon.net' }
]
maintainers = [
    { name = 'Joshua Miller', email = 'joshua@cryptoballoon.net' },
    { name = 'Joe Cronyn', email = 'joe@cryptoballoon.net' }
]
license = { text = 'Apache-2.0' }
readme = 'README.md'
requires-python = '>=3.7'
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'License :: OSI Approved :: MIT License'
]
dependencies = [
    'requests>=2.26.0,<3',
    'betterproto[compiler]>=2.0.0b4,<3',
    'pynacl>=1.5.0',
    'base58==2.1.1',
    'importlib-metadata >= 1.0 ; python_version < "3.8"',
]

[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[tool.mypy]
exclude = """(?x)(
    helium_py/proto/
  )"""
follow_imports = 'silent'
